--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=NPC Counter
+author=birddunks
+description=Counts matching NPCs by name and shows the total
+tags=npc,count,counter
+plugins=org.birddunks.NpcCounterPlugin
